# wind_data_analysis_public

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_wind_analysis.py  simple_gui.py
.github/workflows/: ci-pipeline.yml
input_files/: input_config.json
src/wind_data_analysis/data_reader/: __init__.py  clean_data.py  read_KNMI_LiDAR.py
src/wind_data_analysis/process/: __init__.py  bin_wdir.py  bin_wind.py  calc_shear.py  calc_turb.py  concatenate_wind_stats.py  stats_func.py  wind_height_profile.py
src/wind_data_analysis/utils/: __init__.py  lidar_file_parsing.py  utils.py
tests/: test_read_knmi_lidar.py  test_stat_lidar.py
tests/lidar_data/: ZephIR_Cabauw_ZP738_raw_20200501_v1.CSV  ZephIR_Cabauw_ZP738_raw_20200502_v1.CSV
tests/lidar_data_10min/: ZephIR_Cabauw_ZP738_10min_20200501_v1.CSV  ZephIR_Cabauw_ZP738_10min_20200502_v1.CSV
